As a user I can see my account details [Delivers #179685169]
