# docs/swagger.yaml
@@ -19,7 +19,7 @@ paths:
       tags:
         - users
       responses:
-        '201':
+        '200':
           description: Successful response.
         '400':
           content:
@@ -44,6 +44,58 @@ paths:
       operationId: createuser
       summary: Create a user
       description: Creates a new instance of a `user`.
+
+  /users/current:
+    summary: User details
+    description: Returns user's details
+    get:
+      security:
+        - bearerAuth: []
+      tags:
+        - users
+      responses:
+        '200':
+          description: Returns user's details
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/user'
+              examples:
+                User details:
+                  value:
+                    accounts: [{
+                      "name": "Main",
+                      "number": "abcaadf109e64d7099027a2776503897fe0",
+                      "balance": 10000000,
+                      "currency": "USD" }]
+                    name: Jack Sparrow
+                    username: jack
+        '400':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/error'
+              examples:
+                Invalid Authorization header:
+                  value:
+                    error: Invalid Authorization header format
+          description: Invalid Authorization header format
+        '401':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/error'
+              examples:
+                Missing Authorization header:
+                  value:
+                    error: Missing Authorization header
+                Invalid token:
+                  value:
+                    error: Invalid token
+          description: Invalid Authorization header
+      summary: Get user's details
+      description: Returns instance of `user`
+
   /sessions:
     summary: Path used to manage the list of sessions.
     description: >-
@@ -94,6 +146,16 @@ paths:
       responses:
         '204':
           description: Successful logout
+        '400':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/error'
+              examples:
+                Invalid Authorization header:
+                  value:
+                    error: Invalid Authorization header format
+          description: Invalid Authorization header format
         '401':
           content:
             application/json:
@@ -155,3 +217,4 @@ tags:
   -
     name: users
     description: ''
+
